--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/monosage
+spring.datasource.url = jdbc:mysql://localhost:3306/MovieTime_DataBase
 spring.datasource.username=root
-spring.datasource.password=Vamsi@16
+spring.datasource.password=*****
 #spring.jpa.hibernate.ddl-auto= create  
 spring.jpa.hibernate.ddl-auto=update                                                
 
